# MicroFlow

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  explanation.txt  microflow  requirements-agent.txt  轻量级推理引擎架构.docx
agent/: context_window.py  local_agent_service.py  terminal_skill.py
include/: im2col.h  llm_engine.h  ops.h  tensor.h
model/: mnist.mflow
pi4_optimized/: CMakeLists.txt
pi4_optimized/examples/: mnist_demo.cpp
pi4_optimized/include/microflow/: allocator.hpp  runtime.hpp  tensor.hpp
pi4_optimized/src/conv/: conv.cpp
pi4_optimized/src/gemm/: gemm.cpp
pi4_optimized/src/layers/: layers.cpp
pi4_optimized/src/memory/: tensor.cpp
pi4_optimized/src/runtime/: runtime.cpp
src/: im2col.cpp  llm_engine.cpp  main.cpp  ops.cpp  tensor.cpp
tests/: benchmark_gemm.cpp  test_conv.cpp  test_gemm.cpp  test_llm_engine.cpp  test_mnist_mock.cpp  test_tensor.cpp
tests_py/: test_context_window.py  test_terminal_skill.py
tool/: export_mnist.py  export_mnist_cnn.py  extract_standard.py  get_official_weight.py  train_and_export.py  verify_standard.py
